--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "axios": "^1.6.0",
     "bootstrap": "^5.3.5",
+    "bootstrap-icons": "^1.13.1",
     "core-js": "^3.18.1",
+    "install": "^0.13.0",
+    "npm": "^11.5.2",
     "oidc-client-ts": "^3.2.0",
     "pinia": "^3.0.2",
     "vue": "^3.0.0",
