--- a/template.yaml
+++ b/template.yaml
@@ -49,13 +49,14 @@ Parameters:
   SysNotifEmailAddress:
     Type: String
     Description: Email address for SES notifications
+  AdminEmailAddress:
+    Type: String
+    Description: Email address for admin notifications
   NoCachePolicy:
     Type: String
-    Default: 4135ea2d-6df8-44a3-9df3-4b5a84be39ad
     Description: Global Cache Policy ID for CloudFront (NoCachePolicy)
   AllViewerExceptHostHeader:
     Type: String
-    Default: b689b0a8-53d0-40ab-baf2-68738e2966ac
     Description: Global Origin Request Policy ID for CloudFront (AllViewerExceptHostHeader)
 
 Conditions:
@@ -81,6 +82,7 @@ Resources:
       Parameters:
         SubDomain: !Ref SubDomain
         SysNotifEmailAddress: !Ref SysNotifEmailAddress
+        AdminEmailAddress: !Ref AdminEmailAddress
 
   VerifiedPermissionsStack:
     Type: AWS::CloudFormation::Stack
