--- a/infrastructure/resources/cognito-user-pool.yaml
+++ b/infrastructure/resources/cognito-user-pool.yaml
@@ -36,6 +36,8 @@ Resources:
           RequireUppercase: true
       UsernameAttributes:
         - email
+      AutoVerifiedAttributes:
+        - email
       DeletionProtection: ACTIVE
 
   AdminUserGroup:
