--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ env:
   GLOBAL_CLOUDFRONT_ORIGIN_REQUEST_POLICY: b689b0a8-53d0-40ab-baf2-68738e2966ac
   SYS_NOTIF_EMAIL_ADDRESS: vms.alerts@alphinecodetech.click
   ADMINISTRATOR_EMAIL_ADDRESS: admin@alphinecodetech.click
-  ENABLE_EMAIL_NOTIFICATIONS: false
+  SEND_EMAIL_NOTIFICATIONS: "false"
 
 jobs:
   deploy-backend-and-infra:
