--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "npm": "^11.5.2",
     "oidc-client-ts": "^3.2.0",
     "pinia": "^3.0.2",
+    "pulltorefreshjs": "^0.1.22",
     "vue": "^3.0.0",
     "vue-router": "^4.5.0"
   },
