--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
         "@aws-sdk/client-dynamodb": "^3.398.0",
         "@aws-sdk/client-s3": "^3.844.0",
         "@aws-sdk/client-ses": "^3.840.0",
+        "@aws-sdk/client-ssm": "^3.873.0",
         "@aws-sdk/client-verifiedpermissions": "^3.808.0",
         "@aws-sdk/lib-dynamodb": "^3.398.0",
         "@aws-sdk/s3-request-presigner": "^3.844.0",
